fixed a spelling error

--- a/config.example.json
+++ b/config.example.json
@@ -17,6 +17,6 @@
             "Example-Chat-1",
             "General"
         ],
-        "queueVoiceChannel": "NAME OF YOU VOICE CHANNEL"
+        "queueVoiceChannel": "NAME OF YOUR VOICE CHANNEL"
     }
 }
